# -*- coding: utf-8 -*-
#
# This file is part of Flask-CeleryExt
# Copyright (C) 2015-2022 CERN.
# Copyright (C) 2018-2019 infarm - Indoor Urban Farming GmbH.
# Copyright (C) 2022 Graz University of Technology.
#
# Flask-CeleryExt is free software; you can redistribute it and/or modify it
# under the terms of the Revised BSD License; see LICENSE file for more
# details.

[metadata]
name = Flask-CeleryExt
version = attr: flask_celeryext.__version__
description = "Flask-CeleryExt is a simple integration layer between Celery and Flask."
long_description = file: README.rst, CHANGES.rst
keywords = flask celery
license = BSD
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/flask-celeryext
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
zip_safe = False
install_requires =
    Flask>=1.1
    celery>=5.1.0

[options.extras_require]
tests =
    check-manifest>=0.42
    coverage>=5.3,<6
    docker-services-cli>=0.4.0
    msgpack-python>=0.5.6
    pytest-cov>=3.0.0
    pytest-flask>=1.2.0
    pytest-isort>=3.0.0
    pytest-mock>=2.0.0
    pytest-black>=0.3.12
    pytest-pydocstyle>=2.2.0
    pytest>=6,<7.2.0
    redis>=4.1.4
    Sphinx>=4.2.0
    importlib-metadata<5; python_version<"3.8"

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[isort]
profile=black

[flake8]
max-line-length = 88

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=flask_celeryext --cov-report=term-missing
testpaths = tests flask_celeryext
norecursedirs = .* *.egg *.egg-info env* artwork docs
filterwarnings = ignore::pytest.PytestDeprecationWarning
